fix dark mode

--- a/style.css
+++ b/style.css
@@ -264,6 +264,11 @@ img {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -339,6 +344,11 @@ img {
 
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 
 .text-gray-600 {
